--- a/dashboard.html
+++ b/dashboard.html
@@ -21,11 +21,72 @@
     <main>
         <div id="contenedorEstudiantes" class="contenido">
             <h2>Listado de Estudiantes</h2>
-            <!-- Aquí irá la tabla de estudiantes -->
+            <!--Contenido CRUD Estudiantes -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Juan Pérez</td>
+                        <td>
+                            <button class="btn-editar">Editar</button>
+                            <button class="btn-eliminar">Eliminar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>María López</td>
+                        <td>
+                            <button class="btn-editar">Editar</button>
+                            <button class="btn-eliminar">Eliminar</button>
+                        </td>
+                    </tr>
+                    <!-- Más estudiantes ficticios-->
+
+                </tbody>
+            </table>
+            <button id="agregarEstudiante">Agregar Estudiante</button>
+        </div>
         </div>
         <div id="contenedorAsignaturas" class="contenido">
             <h2>Listado de Asignaturas</h2>
-            <!-- Aquí irá la tabla de asignaturas -->
+            <!-- Contenido CRUD Asignaturas-->
+            <table>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Matemáticas</td>
+                        <td>
+                            <button class="btn-editar">Editar</button>
+                            <button class="btn-eliminar">Eliminar</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Historia</td>
+                        <td>
+                            <button class="btn-editar">Editar</button>
+                            <button class="btn-eliminar">Eliminar</button>
+                        </td>
+                    </tr>
+                    <!-- Más asignaturas ficticias -->
+                </tbody>
+            </table>
+            <button id="agregarAsignatura">Agregar Asignatura</button>
+        </div>
         </div>
     </main>
     <script src="scripts.js"></script>
